Updated to most recent CMF RC versions

--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
 
         "symfony-cmf/symfony-cmf": "^2.0@dev",
         "symfony-cmf/seo-bundle": "^2.0",
-        "symfony-cmf/tree-browser-bundle": "^2.0@dev",
-        "symfony-cmf/content-bundle": "^2.0@dev",
         "symfony-cmf/block-bundle": "^2.0@dev",
+        "symfony-cmf/routing": "^2.0@RC",
+        "symfony-cmf/slugifier-api": "^2.0@RC",
         "symfony-cmf/routing-auto-bundle": "^2.0",
         "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0@dev",
 
