Updated deps to CMF 2.0-RC1

--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
 
-        "symfony-cmf/symfony-cmf": "^2.0@dev",
+        "symfony-cmf/symfony-cmf": "^2.0",
         "symfony-cmf/seo-bundle": "^2.0",
-        "symfony-cmf/tree-browser-bundle": "^2.0@dev",
-        "symfony-cmf/content-bundle": "^2.0@dev",
-        "symfony-cmf/block-bundle": "^2.0@dev",
+        "symfony-cmf/routing": "^2.0",
         "symfony-cmf/routing-auto-bundle": "^2.0",
         "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0@dev",
 
