--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,7 +136,7 @@ cmf_sonata_phpcr_admin_integration:
         seo: ~
         menu: ~
         core: ~
-        content:
+        content: ~
         block:
             basepath: /cms/content
             menu_basepath: /cms/content
