--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "symfony-cmf/seo-bundle": "^2.0",
         "symfony-cmf/routing": "^2.0",
         "symfony-cmf/routing-auto-bundle": "^2.0",
-        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "dev-fix_ckeditor",
+        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0@dev",
 
         "jackalope/jackalope-doctrine-dbal": "1.2.*",
         "jackalope/jackalope-jackrabbit": "1.2.*",
