--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,12 +136,13 @@ cmf_sonata_phpcr_admin_integration:
         seo: ~
         menu: ~
         core: ~
-        content: ~
+        content:
+           ivory_ckeditor:
+              config_name: cmf_sonata_phpcr_admin_integration
         block:
             basepath: /cms/content
             menu_basepath: /cms/content
         routing: ~
-    ivory_ckeditor: ~
 
 sonata_block:
     default_contexts: [cms]
