add config, load right version

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "doctrine/phpcr-odm": "^1.4",
 
         "sonata-project/cache-bundle": "^2.1",
-        "sonata-project/translation-bundle": "^2.0",
+        "sonata-project/translation-bundle": "2.1.0",
         "sonata-project/doctrine-phpcr-admin-bundle": "^2.0@dev",
 
         "jms/serializer-bundle": "^1.1",
