use doctrine-phpcr-sonata routing for tree reorder

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
 
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/translation-bundle": "^2.0",
-        "sonata-project/doctrine-phpcr-admin-bundle": "^2.0@dev",
+        "sonata-project/doctrine-phpcr-admin-bundle": "dev-move_function as 2.0",
 
         "jms/serializer-bundle": "^1.1",
         "friendsofsymfony/rest-bundle": "~1.7",
