--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "eko/feedbundle": "^1.2.7",
         "lunetics/locale-bundle": "^2.5",
         "burgov/key-value-form-bundle": "^1.4",
-        "egeloen/ckeditor-bundle": "^4.0"
+        "egeloen/ckeditor-bundle": "^4.0",
+        "symfony-cmf/tree-browser-bundle": "dev-fix_dnd as 2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
