--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "liip/functional-test-bundle": "^1.3",
-        "symfony-cmf/testing": "^2.0"
+        "symfony-cmf/testing": "^2.0",
+        "symfony/phpunit-bridge": "^3.2"
     },
     "minimum-stability": "RC",
     "prefer-stable": true,
