--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: php
 
-dist: trusty
 php:
   - 5.6
   - 7.0
   # 7.1 is tested using composer install
-  - hhvm
+  #- hhvm does not work on travis anymore even with dist: trusty
 
 sudo: false
 
