--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "symfony-cmf/seo-bundle": "^2.0",
         "symfony-cmf/routing": "^2.0",
         "symfony-cmf/routing-auto-bundle": "^2.0",
-        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0@dev",
+        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0",
 
         "jackalope/jackalope-doctrine-dbal": "1.2.*",
         "jackalope/jackalope-jackrabbit": "1.2.*",
@@ -42,7 +42,7 @@
 
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/translation-bundle": "2.1.0",
-        "sonata-project/doctrine-phpcr-admin-bundle": "^2.0@dev",
+        "sonata-project/doctrine-phpcr-admin-bundle": "^2.0",
 
         "jms/serializer-bundle": "^1.1",
         "friendsofsymfony/rest-bundle": "~1.7",
