--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -42,6 +42,12 @@ web:
       # robots.txt.
       - /robots\.txt$
 
+crons:
+    reset:
+        # reset the demo every night to avoid overflowing disks and data leftovers
+        spec: 2 30 * * *
+        cmd: 'bin/console cache:clear --env=prod && bin/console doctrine:phpcr:init:dbal --drop --force -n && bin/console doctrine:phpcr:repository:init -n && bin/console doctrine:phpcr:fixtures:load -n && bin/console --env=prod cache:warmup -n --no-debug'
+
 # The size of the persistent disk of the application (in MB).
 disk: 2048
 
