do it every 2 hours

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -44,7 +44,7 @@ web:
 
 cron:
     symfony:
-        spec: '0 1 * * *'
+        spec: '* */2 * * *'
         cmd: |
           # force clearing the cache
           rm -rf app/cache/prod
