--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: php
 
 php:
-  - 5.6
-  - 7.0
-  # 7.1 is tested using composer install
+  - 7.1
 
 sudo: false
 
@@ -18,24 +16,25 @@ matrix:
       env: TRANSPORT=jackrabbit COMPOSER_INSTALL=1
     - php: 7.1
       env: TRANSPORT=doctrine_dbal COMPOSER_INSTALL=1
-    - php: hhvm
-      dist: trusty
 
 env:
   global:
+    - SYMFONY_PHPUNIT_DIR=.phpunit SYMFONY_PHPUNIT_REMOVE="symfony/yaml" SYMFONY_PHPUNIT_VERSION=5.7
     - SYMFONY_DEPRECATIONS_HELPER=weak
   matrix:
     - TRANSPORT=jackrabbit
     - TRANSPORT=doctrine_dbal
 
 before_install:
-  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
-    # hack to avoid segmentation fault because of https://bugs.php.net/bug.php?id=74843
+  - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; composer config prefer-stable true; fi;
   - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then echo "zend.enable_gc = 0" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
   - phpenv config-rm xdebug.ini || true
   - composer self-update
 
-install: if [ "$COMPOSER_INSTALL" != "1" ]; then composer update --no-scripts --prefer-dist; else composer install --no-scripts --prefer-dist; fi
+install:
+  - phpenv config-add travis.php.ini
+  - php -ini | grep memory_limit
+  - if [ "$COMPOSER_INSTALL" != "1" ]; then composer update --no-scripts --prefer-dist; else composer install --no-scripts --prefer-dist; fi
 
 before_script:
   - cp app/config/phpcr_${TRANSPORT}.yml.dist app/config/phpcr.yml
@@ -44,7 +43,7 @@ before_script:
   - bin/console doctrine:phpcr:workspace:create sandbox_test -e=test
   - bin/console doctrine:phpcr:repository:init -e=test
 
-script: vendor/bin/simple-phpunit
+script: php vendor/bin/simple-phpunit --debug
 
 notifications:
   irc: "irc.freenode.org#symfony-cmf"
