--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr-4": { "Tests\\": "tests/" }
     },
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.1",
         "symfony/symfony": "^3.3",
         "symfony/assetic-bundle": "^2.8",
         "symfony/swiftmailer-bundle": "^2.3.10",
@@ -40,7 +40,7 @@
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/phpcr-odm": "^1.4",
 
-        "sonata-project/cache-bundle": "^2.1",
+        "sonata-project/cache-bundle": "^2.4",
         "sonata-project/translation-bundle": "2.1.0",
         "sonata-project/doctrine-phpcr-admin-bundle": "^2.0",
 
@@ -55,7 +55,7 @@
         "sensio/generator-bundle": "^3.0",
         "liip/functional-test-bundle": "^1.3",
         "symfony-cmf/testing": "^2.0",
-        "symfony/phpunit-bridge": "^3.2"
+        "symfony/phpunit-bridge": "^3.3"
     },
     "scripts": {
         "post-install-cmd": [
@@ -90,5 +90,8 @@
         "branch-alias": {
             "dev-master": "2.0-dev"
         }
+    },
+    "conflict": {
+        "sonata-project/cache": "<1.1.1"
     }
 }
