--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,18 @@
     backupGlobals="false"
     colors="true"
     bootstrap="app/autoload.php"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    forceCoversAnnotation="false"
+    mapTestClassNameToCoveredClassName="false"
+    processIsolation="false"
+    stopOnError="false"
+    stopOnFailure="false"
+    stopOnIncomplete="false"
+    stopOnSkipped="false"
+    strict="false"
+    verbose="true"
 >
 
     <testsuites>
