--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_script:
   - bin/console doctrine:phpcr:workspace:create sandbox_test -e=test
   - bin/console doctrine:phpcr:repository:init -e=test
 
-script: vendor/bin/simple-phpunit
+script: vendor/bin/simple-phpunit --debug
 
 notifications:
   irc: "irc.freenode.org#symfony-cmf"
