--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -45,13 +45,7 @@ web:
 cron:
     symfony:
         spec: '* */2 * * *'
-        cmd: |
-          # force clearing the cache
-          rm -rf var/cache/prod
-          bin/console --env=prod doctrine:phpcr:init:dbal --drop --force
-          bin/console --env=prod doctrine:phpcr:repository:init
-          bin/console --env=prod doctrine:phpcr:fixtures:load -n
-          bin/console --env=prod cache:warmup -n --no-debug
+        cmd: ./bin/reloadFixtures.sh $PWD
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
@@ -69,13 +63,7 @@ hooks:
       sed -i 's@%kernel.root_dir%/../var/app.sqlite@/tmp/app.sqlite@' app/config/parameters.yml
       bin/console --env=prod assets:install -n --no-debug
       bin/console --env=prod assetic:dump -n --no-debug
-    deploy: |
-      # force clearing the cache
-      rm -rf var/cache/prod
-      bin/console --env=prod doctrine:phpcr:init:dbal --drop --force -n
-      bin/console --env=prod doctrine:phpcr:repository:init -n
-      bin/console --env=prod doctrine:phpcr:fixtures:load -n
-      bin/console --env=prod cache:warmup -n --no-debug
+    deploy: ./bin/reloadFixtures.sh $PWD
 
 runtime:
   extensions:
