--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "symfony-cmf/routing-auto": "^2.1",
         "symfony-cmf/routing-auto-bundle": "^2.1",
         "symfony-cmf/seo-bundle": "^2.1",
-        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.1",
+        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "dev-use_fos_ckeditor",
         "symfony-cmf/symfony-cmf": "^2.1",
         "symfony-cmf/tree-browser-bundle": "^2.1",
         "symfony/console": "^4.0",
@@ -65,14 +65,17 @@
         "sonata-project/translation-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^3.4",
         "friendsofsymfony/ckeditor-bundle": "^1.1",
-        "symfony/asset": "^4.0"
+        "symfony/asset": "^4.0",
+        "sonata-project/formatter-bundle": "^4.1"
     },
     "require-dev": {
         "liip/functional-test-bundle": "^2.0",
         "symfony-cmf/testing": "^2.1",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^3.3",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "php-translation/symfony-bundle": "^0.8.1",
+        "php-translation/symfony-storage": "^1.0"
     },
     "extra": {
         "branch-alias": {
