push with new version

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "symfony-cmf/routing-auto": "^2.1",
         "symfony-cmf/routing-auto-bundle": "^2.1",
         "symfony-cmf/seo-bundle": "^2.1",
-        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "dev-use_fos_ckeditor",
+        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0",
         "symfony-cmf/symfony-cmf": "^2.1",
         "symfony-cmf/tree-browser-bundle": "^2.1",
         "symfony/console": "^4.0",
