fix most dependencies on patch changes only. So cmf is mostly on 2.1.x and symfony on 4.1.x

--- a/config/packages/cmf_phpcr_dbal.yaml
+++ b/config/packages/cmf_phpcr_dbal.yaml
@@ -38,7 +38,7 @@ cmf_sonata_phpcr_admin_integration:
         menu: ~
         core: ~
         content:
-            fos_ck_editor:
+            fos_ckeditor:
                 config_name: cmf_sonata_phpcr_admin_integration
         block:
             basepath: /cms/content
