--- a/composer.json
+++ b/composer.json
@@ -39,41 +39,67 @@
         "jackalope/jackalope-doctrine-dbal": "^1.3",
         "jackalope/jackalope-jackrabbit": "^1.3",
         "jms/serializer-bundle": "^2.3",
-        "lunetics/locale-bundle": "dev-master",
-        "sensio/framework-extra-bundle": "^5.1",
-        "sonata-project/cache-bundle": "2.x-dev",
-        "sonata-project/doctrine-phpcr-admin-bundle": "dev-allow_Symfony_4 as 2.1",
-        "symfony-cmf/resource": "^1.1",
-        "symfony-cmf/resource-rest-bundle": "^1.1",
-        "symfony-cmf/routing": "^2.1",
-        "symfony-cmf/routing-auto": "^2.1",
-        "symfony-cmf/routing-auto-bundle": "^2.1",
-        "symfony-cmf/seo-bundle": "^2.1",
-        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "^1.0",
-        "symfony-cmf/symfony-cmf": "^2.1",
-        "symfony-cmf/tree-browser-bundle": "^2.1",
-        "symfony/console": "^4.0",
-        "symfony/debug-pack": "^1.0",
-        "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0",
+        "lunetics/locale-bundle": "2.6.*",
+        "sensio/framework-extra-bundle": "5.1.*",
+        "sonata-project/cache-bundle": "^2.5",
+        "sonata-project/doctrine-phpcr-admin-bundle": "2.2.*",
+        "symfony-cmf/resource": "1.1.*",
+        "symfony-cmf/resource-rest-bundle": "1.1.*",
+        "symfony-cmf/routing": "2.1.*",
+        "symfony-cmf/routing-auto": "2.1.*",
+        "symfony-cmf/routing-auto-bundle": "2.1.*",
+        "symfony-cmf/seo-bundle": "2.1.*",
+        "symfony-cmf/sonata-phpcr-admin-integration-bundle": "1.1.*",
+        "symfony-cmf/symfony-cmf": "2.1.*",
+        "symfony-cmf/tree-browser-bundle": "2.1.*",
+        "symfony/console": "4.1.*",
+        "symfony/debug-pack": "1.0.*",
+        "symfony/flex": "1.0.*",
+        "symfony/framework-bundle": "4.1.*",
         "symfony/monolog-bundle": "^3.0.2",
-        "symfony/orm-pack": "^1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/web-server-bundle": "^4.0",
-        "symfony/yaml": "^4.0",
+        "symfony/orm-pack": "1.0.*",
+        "symfony/polyfill-apcu": "1.1.*",
+        "symfony/swiftmailer-bundle": "3.2.*",
+        "symfony/web-server-bundle": "4.1.*",
+        "symfony/yaml": "4.1.*",
         "sonata-project/translation-bundle": "^2.3",
-        "sonata-project/doctrine-orm-admin-bundle": "^3.4",
+        "sonata-project/doctrine-orm-admin-bundle": "3.8.*",
         "friendsofsymfony/ckeditor-bundle": "^1.1",
-        "symfony/asset": "^4.0",
-        "sonata-project/formatter-bundle": "^4.1"
+        "symfony/asset": "4.1.*",
+        "sonata-project/formatter-bundle": "4.1.*",
+        "symfony/translation": "4.1.*",
+        "symfony/config": "4.1.*",
+        "symfony/cache": "4.1.*",
+        "symfony/doctrine-bridge": "4.1.*",
+        "symfony/event-dispatcher": "4.1.*",
+        "symfony/expression-language": "4.1.*",
+        "symfony/finder": "4.1.*",
+        "symfony/filesystem": "4.1.*",
+        "symfony/inflector": "4.1.*",
+        "symfony/intl": "4.1.*",
+        "symfony/monolog-bridge": "4.1.*",
+        "symfony/options-resolver": "4.1.*",
+        "symfony/property-access": "4.1.*",
+        "symfony/security": "4.1.*",
+        "symfony/serializer": "4.1.*",
+        "symfony/stopwatch": "4.1.*",
+        "symfony/var-dumper": "4.1.*",
+        "symfony/http-foundation": "4.1.*",
+        "symfony/validator": "4.1.*",
+        "symfony/templating": "4.1.*",
+        "symfony/process": "4.1.*",
+        "symfony/routing": "4.1.*"
     },
     "require-dev": {
         "liip/functional-test-bundle": "^2.0",
-        "symfony-cmf/testing": "^2.1",
-        "symfony/dotenv": "^4.0",
+        "symfony-cmf/testing": "^2.1.11",
+        "symfony/dotenv": "4.1.*",
+        "symfony/dom-crawler": "4.1.*",
+        "symfony/css-selector": "4.1.*",
+        "symfony/debug": "4.1.*",
+        "symfony/browser-kit": "4.1.*",
         "symfony/phpunit-bridge": "^3.3",
-        "symfony/profiler-pack": "^1.0",
+        "symfony/profiler-pack": "1.0.*",
         "php-translation/symfony-bundle": "^0.8.1",
         "php-translation/symfony-storage": "^1.0"
     },
