--- a/config/packages/dev/php_translation.yaml
+++ b/config/packages/dev/php_translation.yaml
@@ -1,5 +1,11 @@
 translation:
-    symfony_profiler:
-        enabled: true
-    webui:
-        enabled: true
+    locales: ["en", "fr", "de"]
+    edit_in_place:
+        enabled: false
+        config_name: app
+    configs:
+        app:
+            dirs: ["%kernel.project_dir%/templates", "%kernel.project_dir%/src"]
+            output_dir: "%kernel.project_dir%/translations"
+            excluded_names: ["*TestCase.php", "*Test.php"]
+            excluded_dirs: [cache, data, logs]
