--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "symfony-cmf/sandbox",
+    "type": "project",
     "description": "Demo Sandbox for the Symfony Content Management Framework",
     "homepage": "http://cmf.symfony.com",
     "license": "MIT",
