--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,6 @@
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
     },
-    "repositories": [
-        {"type": "vcs", "url": "https://github.com/ElectricMaxxx/SonataDoctrinePhpcrAdminBundle"}
-    ],
     "require": {
         "php": "^7.1.3",
         "burgov/key-value-form-bundle": "^1.4",
@@ -92,7 +89,7 @@
         "symfony/routing": "4.1.*"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "^2.0",
+        "liip/functional-test-bundle": "^1.0 || ^2.0",
         "symfony-cmf/testing": "^2.1.11",
         "symfony/dotenv": "4.1.*",
         "symfony/dom-crawler": "4.1.*",
