use 2.0 version of functional test bundle only

--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
         "symfony/routing": "4.1.*"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "^1.0 || ^2.0",
+        "liip/functional-test-bundle": "^2.0",
         "symfony-cmf/testing": "^2.1.11",
         "symfony/dotenv": "4.1.*",
         "symfony/dom-crawler": "4.1.*",
