--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require": {
         "php": "^7.1.3",
+        "ext-libxml": "*",
         "burgov/key-value-form-bundle": "^1.4",
         "doctrine/data-fixtures": "^1.0",
         "doctrine/doctrine-bundle": "^1.6",
@@ -89,7 +90,6 @@
         "symfony/routing": "4.1.*"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "^1.10",
         "symfony-cmf/testing": "^2.1.11",
         "symfony/dotenv": "4.1.*",
         "symfony/dom-crawler": "4.1.*",
