--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,8 @@
         "symfony/validator": "4.1.*",
         "symfony/templating": "4.1.*",
         "symfony/process": "4.1.*",
-        "symfony/routing": "4.1.*"
+        "symfony/routing": "4.1.*",
+        "symfony/browser-kit": "4.1.*"
     },
     "require-dev": {
         "symfony-cmf/testing": "^2.1.11",
